[#68] Refactor : Cors Test